<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">静音小助手</string>
    <string name="service_activity">添加服务</string>
    <string name="action_settings">设置静音服务</string>
	<string name="start_time">开始时间</string>
	<string name="end_time">结束时间</string>
	<string name="btn_save">保存</string>
	<string name="btn_cancer">取消</string>
	<string name="day_repeat">重复</string>
	<string name="type">类型</string>
	<string name="on">静音</string>
	<string name="off">扬声</string>
	
</resources>
