<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/cream">
    <LinearLayout android:background="@color/white"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp">
        
	  	<LinearLayout
	  	    android:id="@+id/startTime"
	  	    style="@style/ItemBase"
	  	    android:orientation="vertical">

	  	    <TextView
	  	        style="@style/ItemDesc"
	  	        android:text="@string/start_time"/>

	  	    <TextView android:id="@+id/nowTime"
	  	        style="@style/ItemTip"/>
	  	    
	  	</LinearLayout>
		
	  	<!-- 分割线 -->
	  	<TextView android:background="@color/cream"
	  	    android:layout_width="fill_parent"
	  	    android:height="1dp"
	  	    android:layout_height="wrap_content"/>
	  	
	  	<LinearLayout android:id="@+id/endTime"
	  	    style="@style/ItemBase"
	  	    android:orientation="vertical">
	  	    <TextView
	  	        style="@style/ItemDesc" 
	  	        android:text="@string/end_time"
	  	        />
	  	    <TextView android:id="@+id/defaultEndTime"
	  	        style="@style/ItemTip"/>
	  	</LinearLayout>
	  	
	  	<!-- 分割线 -->
	  	<TextView android:background="@color/cream"
	  	    android:layout_width="fill_parent"
	  	    android:height="1dp"
	  	    android:layout_height="wrap_content"/>
	  	
		<LinearLayout android:id="@+id/repeat"
	  	    style="@style/ItemBase"
	  	    android:orientation="vertical">
	  	    
	  	    <TextView style="@style/ItemDesc"
	  	        android:text="@string/day_repeat"/>
	  	    
	  	    <TextView android:id="@+id/repeatTip"
	  	        style="@style/ItemTip"/>
	  	    
	  	</LinearLayout>
	  	<!-- 分割线 -->
	  	<TextView android:background="@color/cream"
	  	    android:layout_width="fill_parent"
	  	    android:height="1dp"
	  	    android:layout_height="wrap_content"/>
	  	
	    <LinearLayout android:layout_width="fill_parent"
	  	    android:layout_height="50dp"
	  	    android:orientation="horizontal">
	  	    	  	    
	        <TextView android:text="@string/type"
	            android:layout_height="fill_parent"
	            android:layout_width="wrap_content"
	            android:paddingLeft="10dp"
	            android:layout_gravity="left"
	            android:gravity="center_vertical"
	            android:textColor="@color/white_3"/>
	        
			<RelativeLayout android:layout_width="fill_parent"
			    android:layout_height="fill_parent">

		        <ToggleButton
		            android:id="@+id/toggle"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_alignParentBottom="true"
		            android:layout_alignParentRight="true"
		            android:layout_marginTop="5dp"
		            android:gravity="center_vertical|center_horizontal"
		            android:textColor="@color/white_3"
		            android:textOff="@string/off"
		            android:textOn="@string/on" />

			</RelativeLayout>
	  	</LinearLayout>
		    
	  	
  	</LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_save"
            android:textColor="@color/white_3" />

        <Button
            android:id="@+id/btnCancer"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancer"
            android:textColor="@color/white_3" />
    </LinearLayout>

</LinearLayout>
