<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
 	android:layout_height="wrap_content"
	android:orientation="horizontal"
	android:descendantFocusability="blocksDescendants">
	
	<ToggleButton android:id="@+id/state"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="10dp"
	    android:layout_marginTop="5dp" 
	    android:textOff="@string/off"
        android:textOn="@string/on"
        android:textColor="@color/white_3"/>
	
	<LinearLayout android:layout_width="fill_parent"
	 	android:layout_height="wrap_content"
	 	android:paddingTop="10dp"
		android:orientation="vertical">
		   <TextView android:layout_width="fill_parent"
		       android:layout_height="wrap_content"
		       android:height="25dp"
		       android:paddingLeft="10dp"
		       android:gravity="center_vertical"
		       android:id="@+id/desc"
		       android:text="@string/start_time"
		       android:textColor="@color/white_3"/>
		   <TextView android:layout_width="fill_parent"
		       android:layout_height="wrap_content"
		       android:gravity="center_vertical"
		       android:height="15dp"
		       android:paddingLeft="10dp"
		       android:textSize="12sp"
		       android:textColor="@color/white_7"
		       android:id="@+id/tip"/>
   </LinearLayout>
</LinearLayout>
